# openvmm

./: Cargo.toml  build-for-me.py  build-for-me.sh
.github/workflows/: openvmm-ci.json  openvmm-ci.yaml  openvmm-pr.json  openvmm-pr.yaml
Guide/src/: SUMMARY.md
flowey/flowey_core/src/: node.rs  pipeline.rs
flowey/flowey_lib_common/src/: download_azcopy.rs  download_gh_cli.rs  download_mdbook.rs  download_nuget_exe.rs  download_protoc.rs  install_azure_cli.rs  install_dist_pkg.rs  install_git.rs  install_rust.rs  lib.rs  run_cargo_nextest_run.rs
flowey/flowey_lib_hvlite/src/: build_and_test_vmgs_lib.rs  build_nextest_unit_tests.rs  build_ohcldiag_dev.rs  build_openhcl_initrd.rs  build_openvmm.rs  build_vmgstool.rs  build_xtask.rs  download_lxutil.rs  download_openhcl_kernel_package.rs  download_openvmm_deps.rs  download_uefi_mu_msvm.rs  init_cross_build.rs  init_openvmm_magicpath_openhcl_sysroot.rs  (+4 more)
openhcl/: gen_init_ramfs.py
openhcl/diag_client/: Cargo.toml
openhcl/get_vmrs/: Cargo.toml
openhcl/get_vmrs/src/: main.rs
openhcl/minimal_rt_build/: aarch64-minimal_rt.ld
openhcl/ohcldiag-dev/: Cargo.toml
openhcl/openhcl_boot/: Cargo.toml
openhcl/underhill_core/: Cargo.toml
openhcl/vtl0_playground/: Cargo.toml
openhcl/vtl0_playground/src/: boot_logger.rs  main.rs  rt.rs  single_threaded.rs
openhcl/vtl0_playground/src/arch/: mod.rs
openhcl/vtl0_playground/src/arch/aarch64/: mod.rs
openhcl/vtl0_playground/src/arch/x86_64/: apic.rs  com1.rs  com_port.rs  entry.S  mod.rs  scope.rs  snp.rs
support/host_file_access/: Cargo.toml
support/host_file_access/src/: lib.rs
support/sparse_mmap/: Cargo.toml
tmk/simple_tmk/: Cargo.toml
(+98 files in other folders)
