# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "get_vmrs"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
guid.workspace = true
host_file_access.workspace = true
socket2.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
vmsocket.workspace = true

[lints]
workspace = true

[package.metadata.xtask.house-rules]
allow-dash-in-name = true # emits a binary, where kebab-case is more natural
