# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "vtl0_playground"
edition.workspace = true
rust-version.workspace = true

[dependencies]
aarch64defs.workspace = true
bitfield-struct.workspace = true
cfg-if.workspace = true
minimal_rt.workspace = true
hvdef.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86defs.workspace = true

[build-dependencies]
minimal_rt_build.workspace = true

[lints]
workspace = true
