# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "host_file_access"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitfield-struct.workspace = true
futures.workspace = true
open_enum.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
